changed regex for average to be case insensitive.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         }
         // console.log(indicesMi);
         const average = "average";
-        var regex2 = /average/g,
+        var regex2 = /average/gi,
           result2,
           indicesAv = [];
         while ((result2 = regex2.exec(output3))) {
