increased font size. Changed Overall rating to read as Medicare.gov rating instead.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,8 @@
     <button onclick="ExtractNumbers();">Extract Numbers</button>
 
     <!-- a container for the output -->
-    <div id="results"></div>
+    <div id="results" style="font-size: 20px"></div>
     <div id="output" style="visibility: hidden"></div>
-    <br />
-    <hr />
-    <br />
     <div id="output2" style="visibility: hidden"></div>
 
     <script>
@@ -55,7 +52,7 @@
         while ((result1 = regex1.exec(output3))) {
           indicesMi.push(result1.index);
         }
-        // console.log(indicesMi);
+
         const average = "average";
         var regex2 = /average/gi,
           result2,
@@ -63,9 +60,7 @@
         while ((result2 = regex2.exec(output3))) {
           indicesAv.push(result2.index);
         }
-        // console.log(indicesAv);
-        // console.log(phone1);
-        // console.log(phone2);
+
         const matches = phone1.diff(phone2);
         console.log(matches);
 
@@ -85,26 +80,22 @@
           return myArray[i];
         }
 
-        // console.log(getClosestMi(indicesMi, output3.indexOf(matches[0])));
-        // console.log(getClosestAv(indicesAv, output3.indexOf(matches[0])));
-
-        // console.log(matches[0]);
-        // console.log(output3.substring(1619 + 3, 1743 + 7));
-
         matches.forEach(
           (selection) =>
             (results.innerHTML +=
               "<p>" +
               output3.substring(
                 getClosestMi(indicesMi, output3.indexOf(selection)) + 3,
+                output3.indexOf(selection) + 14
+              ) +
+              " Medicare.gov rating: " +
+              output3.substring(
+                output3.indexOf(selection) + 30,
                 getClosestAv(indicesAv, output3.indexOf(selection)) + 7
-              )) + "</p>"
+              ) +
+              "</p>")
         );
       }
-
-      // find phone number in output then
-      // 5.8 mi "Avalon West Health & Rehabilitation 6246 South Redwood Road Salt Lake City, UT 84123 (801) 969-1420 Overall rating Below average"
-      // start after space after mi. end at average.
 
       function ExtractText1() {
         var input = document.getElementById("file-id");
